app/src/main/java/com/example/eltory/rejectcall/MessageSettingItem.java
package com.example.eltory.rejectcall;

/**
 * Created by eltory on 2017-03-10.
 */
public class MessageSettingItem {

    private String messageStr;
    private boolean chkBox;

    public void setMessageStr(String messageStr) {
        this.messageStr = messageStr;
    }

    public String getMessageStr() {
        return messageStr;
    }

    public void setChkBox(boolean chkBox) {
        this.chkBox = chkBox;
    }

    public boolean getChkBox() {
        return chkBox;
    }
}

